Closed
Bug 965693
Opened 11 years ago
Closed 11 years ago
Remove annoying "Printing XUL documents is not supported" error dialog
Categories
(Core :: Printing: Setup, defect)
Core
Printing: Setup
Tracking
()
RESOLVED
FIXED
mozilla29
People
(Reporter: cpeterson, Assigned: cpeterson)
References
Details
(Whiteboard: [good first verify])
Attachments
(1 file)
5.97 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
STR:
1. Open about:newtab
2. Press the CMD+P keyboard short to attempt to print the page
RESULT:
A disruptive "Printer Error: Printing XUL documents is not supported" error dialog.
I inadvertently press CMD+P on the about:newtab page a couple times a week, probably when trying to press SHIFT+CMD+[ to switch tabs too quickly. This error dialog must then be dismissed, which is annoying, especially considering that the error message is not useful.
btw, this fix makes newtab bug 965642 go away.
Q: If you accept this patch, should I add a comment to ErrorList.h saying that the FAILURE(8) error code has been "retired" and should not be reused?
Attachment #8367812 -
Flags: review?(roc)
Attachment #8367812 -
Flags: review?(roc) → review+
(In reply to Chris Peterson (:cpeterson) from comment #0)
> Q: If you accept this patch, should I add a comment to ErrorList.h saying
> that the FAILURE(8) error code has been "retired" and should not be reused?
No idea!
Assignee | ||
Comment 2•11 years ago
|
||
status-firefox28:
--- → wontfix
status-firefox29:
--- → fixed
Comment 3•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Updated•11 years ago
|
Whiteboard: [good first verify]
Comment 4•10 years ago
|
||
What did this change actually do? Was print intended to fail silently or say an unknown error happened?
Flags: needinfo?(cpeterson)
Comment 5•10 years ago
|
||
2014-02-03-03-02-03-mozilla-central-firefox-29.0a1.en-US.linux-x86_64 without e10s:
Open a new tab.
File - Print preview: a popup with "There was an unexpected problem while printing."
File - Print: does nothing.
I think that's not less annoying than the informative dialog is.
2015-03-18-05-57-50-mozilla-central-firefox-39.0a1.en-US.linux-x86_64
Without e10s: same.
Both with and without e10s, same as the other build, but "Print preview" also shows a popup with "Title: New Tab\n Progress: Preparing…", that never closes until I close it.
Assignee | ||
Comment 6•10 years ago
|
||
I don't know. I think Mike has been working on e10s printing.
Flags: needinfo?(cpeterson) → needinfo?(mconley)
Comment 7•10 years ago
|
||
Pre-checkin build 2014-01-28-03-17-16-mozilla-central-firefox-29.0a1.en-US.linux-x86_64:
Print Preview: "There was an unexpected problem while printing."
Print: "Printing XUL documents is not supported."
Comment 9•9 years ago
|
||
It's really too bad we got rid of this error dialog. We should have rewritten it instead.
Bug 1119653 is another reasonable solution, which will make the dialog obsolete. But in the meantime we need *something* to explain to people why "printing doesn't work for pages without web content".
This issue came up at bug 1181630.
You need to log in
before you can comment on or make changes to this bug.
Description
•