Bug 965693 - Remove annoying "Printing XUL documents is not supported" error dialog. r=roc